<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout1"
    tools:context="chaitanya.im.projectzero.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="chaitanya.im.projectzero.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_msg"
                android:id="@+id/textView"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fa_smile_o"
                android:id="@+id/smiley"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:textSize="35sp"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:id="@+id/button1"
                android:layout_marginTop="10dp"
                android:onClick="buttonClicked"
                android:layout_below="@+id/smiley"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:id="@+id/button2"
                android:onClick="buttonClicked"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button1"
                android:layout_alignLeft="@+id/button1"
                android:layout_alignStart="@+id/button1"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:id="@+id/button3"
                android:layout_marginTop="10dp"
                android:onClick="buttonClicked"
                android:layout_below="@+id/button2"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:id="@+id/button4"
                android:layout_marginTop="10dp"
                android:onClick="buttonClicked"
                android:layout_below="@+id/button3"
                android:layout_alignLeft="@+id/button6"
                android:layout_alignStart="@+id/button6"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:id="@+id/button5"
                android:layout_marginTop="10dp"
                android:onClick="buttonClicked"
                android:layout_below="@+id/button4"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:id="@+id/button6"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button5"
                android:layout_centerHorizontal="true"
                android:onClick="buttonClicked"
                android:textColor="#FFFFFF" />
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>